--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "MLAbram",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "pg-promise": "^11.5.4"
   },
   "devDependencies": {
